apps/base/teslamate/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teslamate
  labels:
    app.kubernetes.io/name: teslamate
    app.kubernetes.io/part-of: homelab-apps
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
