apps/base/teslamate/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate-grafana
  namespace: teslamate
spec:
  selector:
    app: teslamate-grafana
  ports:
    - name: http
      port: 3000
      targetPort: http
