apps/base/teslamate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teslamate
  namespace: teslamate
spec:
  selector:
    app: teslamate
  ports:
    - name: http
      port: 4000
      targetPort: http
