apps/base/teslamate/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: teslamate-grafana
  namespace: teslamate
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: TeslaMate Grafana
    gethomepage.dev/description: Tesla metrics dashboards
    gethomepage.dev/group: Energy
    gethomepage.dev/icon: grafana.png
    gethomepage.dev/app: teslamate-grafana
    gethomepage.dev/pod-selector: app=teslamate-grafana
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.org/ssl-redirect: "false"
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - teslamate-grafana.cluster.f4mily.net
      secretName: wildcard-cluster-f4mily-net-tls
  rules:
    - host: teslamate-grafana.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: teslamate-grafana
                port:
                  number: 3000
